--- a/src/mysoulmates/Views/home.fxml
+++ b/src/mysoulmates/Views/home.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mysoulmates.controllers.HomeController">
+<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mysoulmates.controllers.HomeController">
    <children>
       <ImageView fitHeight="778.0" fitWidth="1343.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -76,6 +76,16 @@
                <children>
                   <ImageView fitHeight="50.0" fitWidth="63.0" pickOnBounds="true" preserveRatio="true" />
                   <JFXButton fx:id="chatBtn" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#switchChat" prefHeight="53.0" prefWidth="161.0" text="Chat" textFill="#c3c0c0">
+                     <font>
+                        <Font name="Copperplate Gothic Light" size="22.0" />
+                     </font>
+                  </JFXButton>
+               </children>
+            </HBox>
+            <HBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="387.0" prefHeight="75.0" prefWidth="219.0">
+               <children>
+                  <ImageView fitHeight="50.0" fitWidth="63.0" pickOnBounds="true" preserveRatio="true" />
+                  <JFXButton fx:id="quizzBtn" alignment="CENTER" buttonType="RAISED" contentDisplay="CENTER" onAction="#switchQuizz" prefHeight="53.0" prefWidth="161.0" text="Quizzs" textFill="#c3c0c0">
                      <font>
                         <Font name="Copperplate Gothic Light" size="22.0" />
                      </font>
